# NAVLLM

./: .gitignore  ReadMe.md  pyproject.toml
agents/: author-agent.md  impl-agent.md  review-agent.md
configs/: config.yaml  cubes.py  expanded_tasks.json
scripts/: baseline_methods.py  download_data.py  example_session.py  generate_paper_tables.py  preprocess_data.py  run_ablation_sensitivity.py  run_additional_analyses.py  run_baseline_comparison.py  run_experiments.py  run_full_experiments.py  run_heuristic_baselines.py  run_llm_experiments.py  run_main_experiments.py  run_quick_eval.py  tune_weights.py
src/: README.md
src/navllm/: __init__.py
src/navllm/cube/: __init__.py  actions.py  engine.py  schema.py  view.py
src/navllm/eval/: __init__.py  metrics.py
src/navllm/llm/: __init__.py  client.py  scorer.py
src/navllm/nav/: __init__.py  recommender.py  session.py
tests/: run_tests.py  test_cube.py
